@@ -51,6 +51,7 @@ Snippet models that inherit from `DraftStateMixin` can now be assigned go-live a
  * Consolidate usage of Excel libraries to a single library `openpyxl`, removing usage of `XlsxWriter`, `tablib`, `xlrd` and `xlwt` (Jaap Roes)
  * Adopt generic class based views for the create User create view, User edit view, user delete view and Users index listing / search results (Mehrdad Moradizadeh)
  * Add `button-secondary bicolor` variants to the pattern library and styleguide (Adinapunyo Banerjee)
+ * Add better support for non-integer / non-`id` primary keys into Wagtail's generic views, including for custom Snippets and User models (Mehrdad Moradizadeh)
 
 ### Bug fixes
 
