@@ -1,0 +1,23 @@
+# Generated by Django 4.0.7 on 2022-09-28 15:18
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ("tests", "0007_draftstatecustomprimarykeymodel"),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name="ModelWithStringTypePrimaryKey",
+            fields=[
+                (
+                    "custom_id",
+                    models.CharField(max_length=255, primary_key=True, serialize=False),
+                ),
+                ("content", models.CharField(max_length=255)),
+            ],
+        ),
+    ]
