@@ -1,0 +1,17 @@
+{% extends "wagtailadmin/generic/base.html" %}
+
+{% block content %}
+
+    <form action="{% url 'testapp_generic_edit' test_object.pk %}" method="POST" >
+        <div class="tab-content">
+            {% csrf_token %}
+            <ul class="fields">
+                {% include "wagtailadmin/shared/field_as_li.html" with field=form.content %}
+                <li>
+                    <input type="submit" value="Save" class="button"/>
+                </li>
+            </ul>
+        </div>
+    </form>
+
+{% endblock %}
